--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
   "dependencies": {
     "@expo/metro-runtime": "^3.1.1",
+    "@react-navigation/native": "^6.1.14",
+    "@react-navigation/native-stack": "^6.9.24",
+    "@types/react": "~18.2.45",
     "expo": "^50.0.1",
     "expo-status-bar": "~1.11.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "^0.73.4",
     "react-native-reanimated": "~3.6.0",
-    "react-native-web": "~0.19.6"
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.29.0",
+    "react-native-web": "~0.19.6",
+    "twrnc": "^4.1.0",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3"
+    "@babel/core": "^7.19.3",
+    "tailwindcss": "^3.3.2"
   },
   "name": "loginuireanimated",
   "version": "1.0.0",
